--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,25 @@
     }
   },
   "require": {
+    "php": ">=5.3.0",
     "symfony/process": "~2.6",
     "symfony/filesystem": "~2.6",
     "symfony/yaml": "~2.6",
-    "guzzle/guzzle": "~3.9",
-    "php-vfs/php-vfs": "~1.2",
-    "rhumsaa/uuid": "~2.8",
-    "knplabs/github-api": "~1.2",
     "symfony/dependency-injection": "~2.6",
-    "symfony/config": "~2.6"
+    "symfony/config": "~2.6",
+    "symfony/validator": "~2.6",
+    "guzzle/guzzle": "~3.9",
+    "knplabs/github-api": "~1.2",
+    "symfony/property-access": "~2.6",
+    "doctrine/cache": "~1.4",
+    "doctrine/annotations": "~1.2"
   },
   "require-dev": {
+    "php": ">=5.4.0",
     "codeception/codeception": "~2.0",
-    "allure-framework/allure-codeception": "dev-master"
+    "allure-framework/allure-codeception": "dev-master",
+    "php-vfs/php-vfs": "~1.2",
+    "rhumsaa/uuid": "~2.8"
   },
   "suggest": {
     "codeception/codeception": "Rich testing framework Allure runner provides support for",
