--- a/tests/Output/.gitignore
+++ b/tests/Output/.gitignore
@@ -5,4 +5,6 @@
 /Data/*
 !/Data/.gitkeep
 /Reports/*
-!/Reports/.gitkeep
+!/Reports/Codeception
+/Reports/Codeception/*
+!/Reports/Codeception/.gitkeep
