--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   },
   "require": {
     "php": ">=5.3.0",
+    "ext-mbstring": "*",
     "symfony/process": "~2.6",
     "symfony/filesystem": "~2.6",
     "symfony/yaml": "~2.6",
@@ -33,7 +34,6 @@
     "guzzle/guzzle": "~3.9",
     "knplabs/github-api": "~1.2",
     "symfony/property-access": "~2.6",
-    "doctrine/cache": "~1.4",
     "doctrine/annotations": "~1.2"
   },
   "require-dev": {
@@ -41,7 +41,7 @@
     "codeception/codeception": "~2.0",
     "allure-framework/allure-codeception": "dev-master",
     "php-vfs/php-vfs": "~1.2",
-    "rhumsaa/uuid": "~2.8"
+    "ramsey/uuid": "~3.0@dev"
   },
   "suggest": {
     "codeception/codeception": "Rich testing framework Allure runner provides support for",
