Fixed coveralls support + added codeclimate support

--- a/tests/Output/.gitignore
+++ b/tests/Output/.gitignore
@@ -8,3 +8,6 @@
 !/Reports/Codeception
 /Reports/Codeception/*
 !/Reports/Codeception/.gitkeep
+!/Reports/Coveralls
+/Reports/Coveralls/*
+!/Reports/Coveralls/.gitkeep
