--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "allure-framework/allure-codeception": "dev-master",
     "php-vfs/php-vfs": "~1.2",
     "ramsey/uuid": "~3.0@dev",
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "dev-master",
+    "codeclimate/php-test-reporter": "dev-master"
   },
   "suggest": {
     "codeception/codeception": "Rich testing framework Allure runner provides support for",
